--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@mantine/form": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
     "@mantine/notifications": "^8.3.5",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.17.1",
     "@tabler/icons-react": "^3.35.0",
     "next": "15.5.4",
+    "next-auth": "^4.24.11",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
